--- a/style.css
+++ b/style.css
@@ -1,3 +1,133 @@
+
+.modal-content {
+  background-color: #f8f9fa;
+}
+
 #mainContainer {
-  text-align:center
+  -webkit-font-smoothing: antialiased;
+}
+
+#modal-top-header {
+  background-color: #0b2a2d;
+  color: #fff;
+  font-size: 14px;
+}
+
+.circle-widget {
+  border-radius: 50%;
+  border: 1px solid transparent;
+  width: 30px;
+  color: #a6724b;
+  background-color: #fff;
+}
+
+.circle-widget > span {
+  text-align: center;
+  line-height: 28px;
+  display: block;
+}
+
+#top-banner > h2 {
+  font-size: 30px;
+  line-height: 1.1;
+  font-weight: 300;
+}
+
+#cover_img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+  
+}
+
+.modal-dialog {
+  max-width: 700px;
+}
+
+#banner_box {
+  height: 160px;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+#picker-container {
+  padding-top: 30px;
+  padding-right: 15px;  
+  padding-left: 15px;
+  position: relative;
+}
+
+.picker-selector {
+  width: 210px;
+  display: inline-block!important;
+  background-position: 92% 50%;
+  background-repeat: no-repeat;
+  background-image: url('https://s3-ap-southeast-1.amazonaws.com/widget.letsumai.com/images/icons/dropdown-arrow.png');
+  padding-right: .5em;
+  height: 50px;
+  padding: 6px 15px;
+  line-height: 1.42857143;
+  background-color: transparent;
+  border: 0 solid #ccc;
+  border-bottom: 1px solid #dedede;
+  border-radius: 0;
+  box-shadow: inset 0 0 0 rgba(0,0,0,.075);
+}
+
+select {
+  -webkit-appearance: none;
+  cursor: pointer;
+}
+
+#circle-widget-container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#lunch_container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+.btn-box {
+  background-color: #a6724ba6;
+  width: 100%;
+  color: #fff;
+  min-height: 50px;
+  display: inline-block;
+  padding: 5px 15px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-box-notify {
+  background-color: #fff;
+  width: 100%;
+  color: #000000b3;
+  min-height: 50px;
+  display: inline-block;
+  padding: 5px 15px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid #000000b3;
 }
